# disertation-anxiety

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  ONBOARDING.md  README.md  ideas-1.md  ideas-2.md  pyproject.toml
configs/: labeling.yaml  subreddits.yaml
docs/: architecture.md  audit_report.md  calibration.md  circularity_ladder.md  cli_reference.md  codebook.md  dapt_mlm.md  data_dictionary.md  disclosure_eval.md  erisk.md  ethics.md  exp6_transformer_fullcorpus.md  experiments.md  external_validation.md  fairness.md  fusion_ablation.md  fusion_calibration.md  fusion_debias.md  hier_user.md  index.md  label_model.md  labeling.md  lexical_ablation.md  llm_baselines.md  models.md  ordinal_severity.md  reproducibility.md  robustness.md  shai_decomposition.md  shap.md  significance.md  stronger_models.md  thesis_outline.md  threshold_calibration.md  troubleshooting.md  user_level.md  user_level_ablation.md  user_level_push.md  validation.md  visualization.md  (+1 more)
experiments/: calibration.csv  circularity_ladder.csv  dapt_mlm.csv  disclosure_userlevel_summary.csv  erisk.csv  exp1_per_target.csv  exp2_transfer.csv  exp3_subreddit_confusion.csv  exp4_markers__anxiety.csv  exp4_markers__depression.csv  exp4_markers__health_anxiety.csv  exp4_markers__suicidality.csv  exp5_health_anxiety_top20.csv  exp5_severity_by_subreddit.csv  exp6_transformer_fullcorpus.csv  exp_dann_transfer.csv  exp_dann_transfer.json  exp_ha_vs_anxiety.json  exp_ha_vs_anxiety_submissions.json  experiments_summary.json  external_validation.csv  fairness.csv  fusion_ablation.csv  fusion_calibration.csv  fusion_debias.csv  hier_user.csv  label_model.csv  label_model_scores.parquet  lexical_ablation.csv  llm_baselines.csv  markers__anxiety.csv  ordinal_severity.csv  robustness.csv  shai_decomposition.csv  shap_linguistic.csv  significance.csv  stronger_models.csv  threshold_calibration.csv  user_level.csv  user_level_ablation.csv  (+4 more)
presentation/: anxiety_health_anxiety.pptx
scripts/: build_presentation.py  calibrate.py  erisk_eval.py  exp6_transformer_fullcorpus.py  exp_circularity_ladder.py  exp_dann_transfer.py  exp_dapt_mlm.py  exp_fusion_ablation.py  exp_fusion_calibration.py  exp_fusion_debias.py  exp_ha_vs_anxiety.py  exp_hier_user.py  exp_label_model.py  exp_lexical_ablation.py  (+20 more)
(+199 files in other folders)
